[tool.poetry]
name = "290536"
version = "0.1.0"
description = ""
authors = ["Comamoca <comamoca.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
types-beautifulsoup4 = "^4.12.0.1"
lxml = "^4.9.2"

[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "^4.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
